# mymonero-core-js

./: .dockerignore  .eslintignore  .eslintrc.json  .flowconfig  .gitignore  .gitmodules  .prettierignore  .prettierrc  .travis.yml  BUILD.md  CMakeLists.txt  Dockerfile  LICENSE  README.exodus.md  README.md  index.js  index.rn.js  indexMoneroCore.rn.js  package-lock.json  package.json  tsconfig.json  types.ts  utils.js  wallaby.js  webpack.browser.dev.config.js  webpack.config.browser.common.js
.github/workflows/: main.yml
HostedMoneroAPIClient/: BackgroundResponseParser.web.js  HostedMoneroAPIClient_Base.js  config__MyMonero.js
__test__/: MG_sigs.spec.ts  cryptonote_utils.spec.ts  ecdh.spec.ts
__test__/borromean/: borromean_1.spec.ts  borromean_2.spec.ts  borromean_3.spec.ts  borromean_4.spec.ts  test_parameters.ts
__test__/fixtures/: requests-modified.json  requests.json
__test__/range_proofs/: range_proofs.spec.ts  range_proofs_with_fee.spec.ts  simple.spec.ts  test_utils.ts
configs/: emscripten.jam
cryptonote_utils/: MyMoneroCoreCpp.js  MyMoneroCoreCpp.js.mem  MyMoneroCoreCpp.wasm  biginteger.d.ts  biginteger.js  crc32.js  crc32.ts  cryptonote_base58.js  cryptonote_base58.ts  cryptonote_crypto_EMSCRIPTEN.js  cryptonote_utils.js  cryptonote_utils.ts  mnemonic.js  mnemonic_languages.js  money_format_utils.js  nettype.js  nettype.ts  str_bin_converters.ts
cryptonote_utils/internal_libs/bs58/: cryptonote_base58.js  index.js  index.ts
cryptonote_utils/internal_libs/cn_crypto/: cryptonote_crypto_EMSCRIPTEN.d.ts  index.js
cryptonote_utils/internal_libs/fast_cn/: index.js  nacl-fast-cn.d.ts
cryptonote_utils/mnemonic/: index.ts  mnemonic.ts  mnemonic_words.json
extern-types/: keccakjs.d.ts
hostAPI/: net_service_utils.js  response_parser_utils.js
hostAPI/response_parser_utils/: index.ts  response_parser_utils.ts  types.ts  utils.ts
js-src/: myMoneroApi.js
monero_utils/: MyMoneroBridgeClass_Base.js  MyMoneroBridge_utils.js  MyMoneroCoreBridge.js  MyMoneroCoreBridgeClass.js  MyMoneroCoreBridgeEssentialsClass.js  MyMoneroCoreBridgeNodeWeb.js  MyMoneroCoreCpp.js  MyMoneroCoreCpp.wasm  MyMoneroCoreCpp_ASMJS.asm.base64.js  MyMoneroCoreCpp_ASMJS.asm.js  MyMoneroCoreCpp_ASMJS.asm.rn.js  MyMoneroCoreCpp_ASMJS.js  MyMoneroCoreCpp_ASMJS.rn.js  MyMoneroCoreCpp_WASM.js  MyMoneroCoreCpp_WASM.wasm  MyMoneroCoreRN.js  __IPCSafe_remote_monero_utils.js  __bridged_fns_spec.js  _monero_utils_i_nonthrowing.js  bridged_fns_spec.js  key_image_utils.ts  monero_amount_format_utils.js  monero_config.js  monero_config.ts  monero_cryptonote_utils_instance.js  monero_keyImage_cache_utils.js  monero_paymentID_utils.js  monero_paymentID_utils.ts  monero_requestURI_utils.js  monero_sendingFunds_utils.js  monero_txParsing_utils.js  monero_txParsing_utils.ts  monero_utils.js  monero_utils_rn.js  monero_wallet_locale.js  monero_wallet_utils.js  mymonero_response_parser_utils.js  request_funds_uri_utils.ts
monero_utils/sending_funds/: sending_funds.ts
monero_utils/sending_funds/internal_libs/: amt_utils.ts  async_node_api.ts  errors.ts  fee_utils.ts  key_utils.ts  logger.ts  output_selection.ts  parse_target.ts  pid_utils.ts  types.ts
monero_utils/sending_funds/internal_libs/construct_tx_and_send/: types.ts
monero_utils/sending_funds/internal_libs/tx_utils/: tx_utils.ts  types.ts
src/: emscr_async_send_bridge.cpp  emscr_async_send_bridge.hpp  index.cpp  index.ts  module-post.js  types.ts
src/biginteger/: biginteger.d.ts  index.ts
src/cryptonote_utils/: cryptonote_utils.ts  formatters.ts  index.ts  nettype.ts
src/cryptonote_utils/internal_libs/bs58/: cryptonote_base58.d.ts  cryptonote_base58.js
src/extern-types/: keccakjs.d.ts
src/hostAPI/: index.ts
src/hostAPI/response_parser_utils/: response_parser_utils.ts  types.ts  utils.ts
src/monero_utils/: index.ts  key_image_utils.ts  monero_paymentID_utils.ts  monero_txParsing_utils.ts  request_funds_uri_utils.ts
src/monero_utils/sending_funds/: mixin_utils.ts  sending_funds.ts  status_update_constants.ts
src/monero_utils/sending_funds/internal_libs/: types.ts  (+8 more)
src/xmr-address-utils/: index.ts  types.ts
src/xmr-b58/: index.ts  xmr-base58.js
src/xmr-constants/: address.ts  coin-config.ts
src/xmr-crypto-ops/: constants.ts  derivation.ts  hash_ops.ts  index.ts  key_image.ts  primitive_ops.ts  rct.ts  rctOps.ts
src/xmr-device/: device-default.ts  types.ts
src/xmr-fast-hash/: index.ts
src/xmr-key-utils/: index.ts
src/xmr-keyimg-memoized/: index.ts
src/xmr-money/: formatters.ts  parsers.ts
src/xmr-mymonero-libs/mymonero-api/: index.ts  request-utils.ts
src/xmr-mymonero-libs/mymonero-send-tx/: index.ts  sending_funds.ts
src/xmr-mymonero-libs/mymonero-uri/: index.ts
src/xmr-nettype-address-prefixes/: index.ts
src/xmr-pid/: index.ts
src/xmr-rand/: index.ts
src/xmr-str-utils/: hex-strings.ts  index.ts  integer-strings.ts  std-strings.ts
src/xmr-transaction/: create-tx.ts  index.ts  tx-status.ts
src/xmr-transaction/libs/: utils.ts
src/xmr-types/: index.ts
src/xmr-varint/: index.ts
src/xmr-vendor/cn_crypto/: cryptonote_crypto_EMSCRIPTEN.d.ts  index.ts
src/xmr-vendor/fast_cn/: index.ts  nacl-fast-cn.js
test/: MyMoneroCoreCpp.node.js  index.node.js  monero_utils.spec.js  sendingFunds.spec.js  testMyMoneroApi.js  txParsing.spec.js
tests/: MG_sigs.spec.js  MyMoneroCoreCpp.node.js  cryptonote_utils.js  cryptonote_utils.spec.js  cryptonote_utils__Module.node.js  ecdh.spec.js  index.node.js  monero_utils.spec.js  range_proofs.spec.js  sendingFunds.spec.js  txParsing.spec.js
tests/borromean/: borromean_1.spec.js  borromean_2.spec.js  borromean_3.spec.js  borromean_4.spec.js  test_parameters.js
tests/emjs/: MyMoneroCoreCpp.spec.js  MyMoneroCoreCpp_int.node.js  cryptonote_utils__int.node.js  dummy-cnutils.js  dummy-test-utils.js  tmp-cnutil.node.js
tests/range_proofs/: range_proofs.spec.js  range_proofs_with_fee.spec.js  simple.spec.js  test_utils.js
tests/web/: test_harness.html
testsrc/: MyMoneroCoreCpp.node.js  index.node.js  monero_utils.spec.js  sendingFunds.spec.js  testMyMoneroApi.js
(+43 files in other folders)
